<resources>

    <string name="fb_id">wwww</string>
    <string name="fb_token">wwwww</string>
    <string name="admob_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="trust_look_key">902f837a9821f8dfa2348d2fdafb7a20745286e015a33ad42b6819e8</string>

    <string name="app_name">File Cleaner</string>
    <string name="splash_loading_tips">Loading, thank you for your patience.</string>
    <string name="make_sure_this_option_is_enabled">Make sure this option is enabled.</string>
    <string name="how_to_do">How To Do</string>
    <string name="got_it">Got It</string>
    <string name="unknown_error">Unknown error</string>
    <string name="url_error">URL error</string>

    <string name="user_terms">User Terms</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="just_a_moment_while_we_scan">Just a moment while we scan...</string>
    <string name="apk_files">Apk Files</string>
    <string name="log_files">Log Files</string>
    <string name="ad_junk">AD Junk</string>
    <string name="temp_files">Temp Files</string>
    <string name="app_cache">App Cache</string>
    <string name="clean">Clean</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="app_manager">App Manager</string>
    <string name="duplicate_files">Duplicate Files</string>
    <string name="screenshot">Screenshot</string>
    <string name="file_manager">File Manager</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="docs">Docs</string>
    <string name="apk">Apk</string>
    <string name="scanning">scanning</string>
    <string name="permission_needed_clean_more_junk_now">Permission needed: clean more junk now.</string>
    <string name="there_are_no_application_cache_files">There are no application cache files.</string>
    <string name="junk_exit_tips">Junk files haven’t been cleaned yet. Would you still like to exit?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="please_click_the_bottom_button">Please click the bottom button</string>
    <string name="i_know">I Know</string>
    <string name="need_authorization_to_find_more_junk">Need Authorization To Find More Junk</string>
    <string name="grant">Grant</string>
    <string name="not_now">Not Now</string>
    <string name="ok">OK</string>
    <string name="cleaning_back_tips">Cleaning is in progress, thank you for your patience</string>
    <string name="loading">Loading</string>
    <string name="clean_end_tips">A total of %1$s has been deleted.</string>
    <string name="clean_finished">Clean Finished</string>
    <string name="tools">Tools</string>
    <string name="storage_of_used">%1$s of %2$s Used</string>
    <string name="setting">Setting</string>
    <string name="uninstall">Uninstall</string>
    <string name="installed_time">Installed:%1$s</string>
    <string name="day_unused"> day unused</string>
    <string name="days_unused"> days unused</string>
    <string name="more_than">"more than "</string>
    <string name="unanimous">Unanimous</string>
    <string name="currently_no_data">Currently no data.</string>
    <string name="cleaning">Cleaning</string>
    <string name="warning">Warning</string>
    <string name="do_you_wish_to_delete_this">Do you wish to delete this?</string>
    <string name="delete">Delete</string>
    <string name="deleting">Deleting</string>
    <string name="keep_the_latest">Keep the latest</string>
    <string name="keep_the_oldest">keep the oldest</string>
    <string name="deselect_all">Deselect All</string>
    <string name="files_have_been_deleted">%1$d files have been deleted</string>
    <string name="phone_clean">Phone Clean</string>
    <string name="file_not_exist">File not exist</string>
    <string name="no_permission_to_install">[File Cleaner] does not have permission to install items</string>
    <string name="files">files</string>
    <string name="audio">Audio</string>
    <string name="used">Size Used: %1$s</string>
    <string name="no_junk_found">NO Junk Found</string>
    <string name="ads_loading">Ads Loading...</string>
    <string name="confirm">Confirm</string>
    <string name="turn_on_notifications">Turn on notifications to stay informed about important updates.</string>
    <string name="net_traffic">Net Traffic</string>


    <string name="notice_btn_clean_time">Clean</string>
    <string name="notice_message_clean_time_1">Free up space fast!</string>
    <string name="notice_message_clean_time_2">Clean junk instantly!</string>
    <string name="notice_message_clean_time_3">Clear unnecessary files!</string>

    <string name="notice_btn_virus_time">Now!</string>
    <string name="notice_message_virus_time_1">Critical virus detected! Act immediately!</string>
    <string name="notice_message_virus_time_2">System security compromised! One-click threat removal!</string>
    <string name="notice_message_virus_time_3">Virus breach detected! Initiate deep scan now!</string>


    <string name="notice_btn_clean_unlock">Clean</string>
    <string name="notice_message_clean_unlock_1">Free up space instantly!</string>
    <string name="notice_message_clean_unlock_2">Clear junk files fast!</string>
    <string name="notice_message_clean_unlock_3">One tap to clean up!</string>
    <string name="notice_message_clean_unlock_4">Optimize storage now!</string>
    <string name="notice_message_clean_unlock_5">Speed up your device!</string>

    <string name="notice_btn_virus_unlock">Destroy!</string>
    <string name="notice_message_virus_unlock_1">Virus Detected: Some files may be infected!</string>
    <string name="notice_message_virus_unlock_2">Urgent Notice! Your passwords might be vulnerable.</string>
    <string name="notice_message_virus_unlock_3">Suspicious Program Detected: Potential data theft risk.</string>


    <string name="notice_btn_clean_uninstall">Clean</string>
    <string name="notice_message_clean_uninstall_1">Erase junk in seconds!</string>
    <string name="notice_message_clean_uninstall_2">Remove leftovers now!</string>
    <string name="notice_message_clean_uninstall_3">Clear traces instantly!</string>
    <string name="notice_message_clean_uninstall_4">Reclaim space fast!</string>
    <string name="notice_message_clean_uninstall_5">Delete unused files!</string>

    <string name="notice_btn_clean_install">Clean</string>
    <string name="notice_message_clean_install_1">Clean junk in seconds!</string>
    <string name="notice_message_clean_install_2">Remove leftovers now!</string>
    <string name="notice_message_clean_install_3">Wipe traces instantly!</string>
    <string name="notice_message_clean_install_4">Gain space fast!</string>
    <string name="notice_message_clean_install_5">Delete unused files!</string>

    <string name="notification_settings">Notification Settings</string>
    <string name="network_traffic_monitoring">Network Traffic Monitoring</string>
    <string name="empty_folder">Empty Folder</string>
    <string name="empty_folders">Empty Folders</string>
    <string name="recent_app">Recent App</string>
    <string name="big_file">Big File</string>

    <string name="folders_have_been_deleted">%1$d folders have been deleted</string>
    <string name="all_types">All types</string>
    <string name="big_file_photo">Photo</string>
    <string name="big_file_video">Video</string>
    <string name="big_file_audio">Audio</string>
    <string name="big_file_docs">Document</string>
    <string name="big_file_zip">Archives</string>
    <string name="big_file_apk">Apk</string>
    <string name="big_file_others">Others</string>

    <string name="all_time">All time</string>
    <string name="big_file_one_week">1 Week</string>
    <string name="big_file_one_month">1 Month</string>
    <string name="big_file_three_month">3 Months</string>
    <string name="big_file_six_month">6 Months</string>
    <string name="big_file_one_year">1 Year</string>
    <string name="delete_size">Delete (%1$s)</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="launches">Launches</string>
    <string name="launch">Launch</string>
    <string name="screen_time">Screen Time</string>
    <string name="stop">Stop</string>

    <string name="last7">Last 7 Days</string>
    <string name="yesterday">Yesterday</string>
    <string name="last60">Last 60 mins</string>
    <string name="today">Today</string>
    <string name="tap_force_stop_to_completely_close_the_running_app">Tap \"Force Stop\" to completely close the running app.</string>
    <string name="manage">Manage</string>
    <string name="no_empty_folders_found">No empty folders found</string>
    <string name="skip">Skip</string>
    <string name="floating_window_per_tip">Enable notifications to stay updated on important alerts.</string>
    <string name="floating_window_permissions">Floating Window Permissions</string>
    <string name="str_continue">Continue</string>
    <string name="antivirus">Antivirus</string>
    <string name="data_collection_notice">Data Collection Notice</string>
    <string name="agree">Agree</string>
    <string name="antivirus_tip"><![CDATA[Trustlook\'s mobile security solution uses an SDK to collect data on installed apps—such as package identifiers, digital signatures, and hash values—for malware analysis. This app metadata is securely sent to Trustlook\'s cloud-based threat detection platform for thorough security verification. For more information on data handling practices, refer to Trustlook\'s official privacy policy:<a href=\'https://www.trustlook.com/privacy-policy\'>https://www.trustlook.com/privacy-policy</a>]]></string>
    <string name="virus">Virus</string>
    <string name="malware">Malware</string>
    <string name="scan_error">Scan Error</string>
    <string name="please_try_again">Please try again!</string>
    <string name="finished">Scan Complete</string>
    <string name="threats_found">%1$d Threats Found</string>
    <string name="sure_to_delete">Sure to delete?</string>
    <string name="delete_failed">Delete Failed!</string>
    <string name="antivirus_finished">Antivirus Finished</string>
    <string name="no_threats_found">No threats found</string>
    <string name="all_threats_resolved">All Threats Resolved</string>
</resources>