<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bg_white_top_18"
    android:gravity="center"
    android:orientation="vertical">

    <View
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_bg_f9fafd_8" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_last60min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:foreground="?selectableItemBackgroundBorderless"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingVertical="14dp"
        android:text="@string/last60"
        android:textColor="@color/color_text"
        android:theme="@style/Sansita" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F2F3F3"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_today"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?selectableItemBackgroundBorderless"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingVertical="14dp"
        android:textColor="@color/color_text"
        android:theme="@style/Sansita"
        tools:text="@string/today" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F2F3F3"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_yesterday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?selectableItemBackgroundBorderless"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingVertical="14dp"
        android:textColor="@color/color_text"
        android:theme="@style/Sansita"
        tools:text="@string/yesterday" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F2F3F3"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_last7days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:foreground="?selectableItemBackgroundBorderless"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingVertical="14dp"
        android:textColor="@color/color_text"
        android:theme="@style/Sansita"
        tools:text="@string/last7" />

</androidx.appcompat.widget.LinearLayoutCompat>

