<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:round="12dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/user_terms"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/item_setting_bg"
        android:drawableEnd="@drawable/more_arrow"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/user_terms"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/item_setting_bg"
        android:drawableEnd="@drawable/more_arrow"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/privacy_policy"
        android:textColor="@color/black"
        android:textSize="14sp" />


</androidx.appcompat.widget.LinearLayoutCompat>