<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_white_12">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="10dp"
        android:src="@drawable/icon_close_floating_window"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:includeFontPadding="false"
        android:text="@string/data_collection_notice"
        android:textColor="#4C4C4C"
        android:textSize="14sp"
        android:textStyle="bold"
        android:theme="@style/SansitaBold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/des"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/antivirus_tip"
        android:textColor="#4C4C4C"
        android:lineSpacingExtra="3dp"
        android:textSize="14sp"
        android:theme="@style/Sansita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_agree"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="37dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ripple_primary_bg_10"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/agree"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:theme="@style/SansitaBold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/des" />


</androidx.constraintlayout.widget.ConstraintLayout>
