<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="35dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_white_12"
        android:elevation="3dp">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:round="5dp"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/how_to_do"
            android:textColor="#444444"
            android:textSize="16sp"
            android:theme="@style/SansitaBold"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/icon"
            app:layout_constraintStart_toEndOf="@+id/icon"
            app:layout_constraintTop_toTopOf="@+id/icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/des"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:theme="@style/Sansita"
            android:layout_marginTop="25dp"
            android:text="@string/make_sure_this_option_is_enabled"
            android:textColor="#444444"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_got"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/SansitaBold"
            android:layout_margin="20dp"
            android:foreground="?selectableItemBackgroundBorderless"
            android:padding="5dp"
            android:text="@string/got_it"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/des" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>