<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="35dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_white_12">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="200dp"
            android:layout_height="172dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/icon_use_this_folder" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/how"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_do"
            android:textColor="#272727"
            android:textSize="16sp"
            android:textStyle="bold"
            android:theme="@style/SansitaBold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/des"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/please_click_the_bottom_button"
            android:textColor="#8F8F8F"
            android:theme="@style/Sansita"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/how" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_i_know"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="37dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="21dp"
            android:background="@drawable/ripple_primary_bg_10"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/i_know"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:theme="@style/SansitaBold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/des" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>